# book-wiki

./: .gitignore  LICENSE  README.md  TODO.md  demobook.json.bz2  justfile  pyproject.toml
bookwiki/: config_enums.py  db.py  llm.py  processor.py  search.py  utils.py
bookwiki/data/: ACKNOWLEDGEMENT  __init__.py  chapter_prompt.txt  compress_prompt.txt  schema.sql  system_prompt.txt
bookwiki/demo/: __init__.py  llm.py  tools.py  weather.py
bookwiki/impls/: openai.py
bookwiki/models/: __init__.py  block.py  chapter.py  configuration.py  conversation.py  prompt.py  wikipage.py
bookwiki/static_gen/: generator.py
bookwiki/tools/: __init__.py  base.py  chapter.py  prompt.py  system.py  wiki.py
bookwiki/web/: app.py  background_worker.py  filters.py  logging_config.py
scripts/: dump_prompts.py  prompt_summaries.py
tests/: __init__.py  conftest.py  helpers.py  test_configuration.py  test_conversation_states.py  test_db.py  test_db_transactions.py  test_edge_cases.py  test_integration.py  test_model_relationships.py  test_models_block.py  test_models_chapter.py  test_models_chapter_new_methods.py  test_models_conversation.py  test_models_coverage.py  test_models_prompt.py  test_models_wiki_page.py  test_openai_impl.py  test_performance_timer.py  test_processor_finalization.py  test_tool_registry.py  test_utils.py  test_web.py  test_web_conversations.py  test_web_feedback.py  test_web_prompts.py  test_web_wiki.py  test_wiki_page_blank_values.py  test_wikipage_name_deduplication.py  test_wikipage_rrf_ordering.py
tests/tools/: __init__.py  test_base.py  test_chapter.py  test_deserialize.py  test_prompt.py  (+3 more)
(+41 files in other folders)
