[project]
name = "bookwiki"
version = "0.1.0"
description = "LLM generated spoiler-free wiki for novels"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "python-dotenv>=1.1.1",
    "pydantic>=2.11.7",
    "openai>=1.99.6",
    "rapidfuzz>=3.13.0",
    "numpy>=1.26.0",
    "markdown>=3.4.0",
    "jinja2>=3.1.0",
    "pagefind[extended]>=1.0.0",
    "minify-html>=0.16.4",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.1",
]

[project.scripts]
bookwiki = "bookwiki.web.app:main"
bookwiki-demo-llm = "bookwiki.demo.llm:main"
bookwiki-demo-tools = "bookwiki.demo.tools:main"
bookwiki-demo-weather = "bookwiki.demo.weather:main"
bookwiki-static-gen = "bookwiki.static_gen.generator:main"

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = []
fixable = ["ALL"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "llm.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.coverage.run]
source = ["bookwiki"]
omit = ["bookwiki/demo/*"]

[build-system]
requires = ["flit_core>=3.12,<4"]
build-backend = "flit_core.buildapi"
